[package]
categories = ["memory-management", "caching"]
description = "Determine the size in bytes an object occupies inside RAM."
edition = "2021"
keywords = ["size", "heap", "ram", "cache", "memory"]
license = "MIT"
name = "get-size"
readme = "README.md"
version = "0.2.0"

[dependencies]
dashmap = { version = "5", optional = true }
get-size-derive = { path = "./get-size-derive", optional = true }
serde_json = { version = "1", optional = true }
uuid = { version = "1", optional = true }

[dev-dependencies]
get-size = { path = ".", features = ["full"] }

[features]
default = []

full = ["derive", "dashmap", "serde_json", "uuid"]

dashmap = ["dep:dashmap"]
derive = ["get-size-derive"]
serde_json = ["dep:serde_json"]
uuid = ["dep:uuid"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
