[package]
categories = ["memory-management", "caching"]
description = "Derives the GetSize trait."
edition = "2021"
keywords = ["size", "heap", "ram", "cache", "memory"]
license = "MIT"
name = "get-size-derive"
readme = "README.md"
version = "0.2.0"

[lib]
proc-macro = true

[dependencies]
attribute-derive = "^0.6"
quote = "^1"
syn = { version = "^2", features = ["derive", "parsing"] }
